--- a/src/app/components/income/portafolios/portafolios.component.css
+++ b/src/app/components/income/portafolios/portafolios.component.css
@@ -61,3 +61,12 @@
   outline: none;
   background-color: #eaeaea;
 }
+
+.carrito-button {
+  background: rgb(54, 169, 225, 0.8);
+  color: white;
+  font-size: 15px;
+  width: 120px;
+  height: 35px;
+  text-align: center;
+}
