--- a/src/app/components/income/portafolios/portafolios.component.html
+++ b/src/app/components/income/portafolios/portafolios.component.html
@@ -1,12 +1,16 @@
 <div style="width: 95%; margin: auto">
     <div class="card" id="tarjetas">
         <br />
-        <div class="card-header">
+        <div class="card-header d-flex justify-content-between">
             <div class="row mx-3">
-                <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363"></fa-icon>
-                <h1 class="mx-5" style="color: #636363">Portafolios de los Productos</h1>
+              <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363"></fa-icon>
+              <h1 class="mx-5" style="color: #636363">Portafolios de los Productos</h1>
             </div>
-        </div>
+            <button class="btn button carrito-button" (click)="verCarrito()">
+              <fa-icon [icon]="faShoppingCart" [size]="'lg'" style="color: #ffffff"></fa-icon>
+            - Carrito
+            </button>
+          </div>          
         <div class="card-body">
             <div>
                 <mat-grid-list cols="6" rowHeight="50px">
@@ -24,11 +28,12 @@
                     </mat-grid-tile>
                 </mat-grid-list>
             </div>
-            <br /><br />
+            <br/><br/>
             <div class="search-container">
                 <!-- Campo de búsqueda -->
-                <input type="text" [(ngModel)]="searchText" placeholder="Buscar" style="margin-bottom: 10px;" class="search-input" (ngModelChange)="onSearchChange()">
-              </div>
+                <input type="text" [(ngModel)]="searchText" placeholder="Buscar" style="margin-bottom: 10px;"
+                    class="search-input" (ngModelChange)="onSearchChange()">
+            </div>
 
             <mat-grid-list cols="4" rowHeight="400px">
                 <mat-grid-tile *ngFor="let modeloproducto of pagedModeloProductos">
@@ -45,25 +50,26 @@
                                 <div class="content-container">
                                     <div class="image-container">
                                         <img src="{{ modeloproducto.url_image }}" alt="{{ modeloproducto.marca }}"
-                                        class="card-image" height="100px" width="100px" data-toggle="modal"
-                                        data-target="#exampleModal" />
-                                    </div> 
+                                            class="card-image" height="100px" width="100px" data-toggle="modal"
+                                            data-target="#exampleModal" />
+                                    </div>
                                     <p style="color: black; font-size: 12px; font-weight: normal">
                                         {{ modeloproducto.modelo_producto }}
-                                    </p>     
-                                </div>                                
+                                    </p>
+                                </div>
                             </mat-card-title>
                         </mat-card-header>
                         <mat-card-content>
-                            <button type="button" (click)="comprar(modeloproducto)" style="height: 30px; width: 100px; font-size: 10px"
-                                class="btn btn-primary">
-                                COMPRAR
+                            <button type="button" (click)="comprar(modeloproducto)"
+                                style="height: 30px; width: 100px; font-size: 10px" class="btn btn-primary">
+                                AÑADIR
                             </button>
                         </mat-card-content>
                     </mat-card>
                 </mat-grid-tile>
             </mat-grid-list>
-            <mat-paginator [length]="filteredModeloProductos.length" [pageSize]="itemsPerPage" (page)="onPageChange($event)"></mat-paginator>
+            <mat-paginator [length]="filteredModeloProductos.length" [pageSize]="itemsPerPage"
+                (page)="onPageChange($event)"></mat-paginator>
         </div>
     </div>
 </div>
