--- a/src/app/components/income/carrito/carrito.component.html
+++ b/src/app/components/income/carrito/carrito.component.html
@@ -1,1 +1,58 @@
-<p>carrito works!</p>
+<div style="width: 95%; margin: auto">
+    <div class="card">
+        <br />
+        <div class="card-header d-flex justify-content-between">
+            <div class="row mx-3">
+              <fa-icon [icon]="faShoppingCart" [size]="'3x'" style="color: #636363"></fa-icon>
+              <h1 class="mx-5" style="color: #636363">Carrito de Compras</h1>
+            </div>
+          </div>          
+        <div class="card-body">
+            <div>
+                <mat-grid-list cols="6" rowHeight="50px">
+                    <mat-grid-tile>
+                        <a class="btn button" href="#" (click)="verPortafolios($event)" style="
+                text-align: center;
+                font-size: 15px;
+                width: 140px;
+                height: 35px;
+                text-align: center;
+                margin-top: 10px;
+                background: rgb(54, 169, 225, 0.8);
+              "><span style="color: white"> Volver </span>
+                        </a>
+                    </mat-grid-tile>
+                </mat-grid-list>
+            </div>
+            <br/><br/>
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+                <thead style="color: #636363;">
+                    <tr>
+                        <th style="width: 20%; "></th>
+                        <th style="width: 10%; ">Modelo Producto</th>
+                        <th style="width: 10%; ">Producto</th>
+                        <th style="width: 10%; ">Cantidad</th>
+                        <th style="width: 10%; ">Costo</th>
+                        <th style="width: 10%; ">Precio</th>
+                        <th style="width: 10%; ">Tamaño</th>
+                        <th style="width: 10%; ">Color</th>
+                    </tr>
+                </thead>
+                <tbody style="color: #767695;">
+                    <tr *ngFor="let detalleMovimientos of lstDetalleMovimientos">
+                        <td style="text-align: center;">
+                            <img src={{detalleMovimientos.url_image}} alt={{detalleMovimientos.precio}} class="img-thumbnail" height="100px" width="100px" data-toggle="modal" data-target="#exampleModal">
+                        </td>
+                        <td>{{detalleMovimientos.modelo_producto_nombre}}</td>
+                        <td>{{detalleMovimientos.producto_nombre}}</td>
+                        <td>{{detalleMovimientos.cantidad}}</td>
+                        <td>{{detalleMovimientos.costo}}</td>
+                        <td>{{detalleMovimientos.precio}}</td>
+                        <td>{{detalleMovimientos.tamanio}}</td>
+                        <td>{{detalleMovimientos.color}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
