--- a/src/app/components/income/portafolios-comprar/portafolios-comprar.component.css
+++ b/src/app/components/income/portafolios-comprar/portafolios-comprar.component.css
@@ -92,3 +92,11 @@
   background-color: lightgreen;
 }
 
+.carrito-button {
+  background: rgb(54, 169, 225, 0.8);
+  color: white;
+  font-size: 15px;
+  width: 120px;
+  height: 35px;
+  text-align: center;
+}
