--- a/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
+++ b/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
@@ -1,11 +1,15 @@
 <div style="max-width: 95%; margin: auto">
   <div class="card">
     <br />
-    <div class="card-header">
+    <div class="card-header d-flex justify-content-between">
       <div class="row mx-3">
         <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363"></fa-icon>
         <h1 class="mx-5" style="color: #636363">CURVA DEL PRODUCTO</h1>
       </div>
+      <button class="btn button carrito-button" (click)="verCarrito()">
+        <fa-icon [icon]="faShoppingCart" [size]="'lg'" style="color: #ffffff"></fa-icon>
+      - Carrito
+      </button>
     </div>
     <div class="card-body">
       <div>
