--- a/src/app/components/income/pedido-create/pedido-create.component.html
+++ b/src/app/components/income/pedido-create/pedido-create.component.html
@@ -1,7 +1,7 @@
 <div class="dialog-content">
     <div class="btn-cerrar">
         <fa-icon [icon]="faTimes" class="btn btn-danger" [size]="'lg'" data-toggle="tooltip"
-            data-placement="bottom" title="Regresar a modelos" (click)="cerrarDialog()">
+            data-placement="bottom" title="Regresar a pedidos" (click)="cerrarDialog()">
         </fa-icon>
     </div>
 </div>
