--- a/src/app/components/income/carrito/carrito.component.html
+++ b/src/app/components/income/carrito/carrito.component.html
@@ -25,17 +25,23 @@
                 </mat-grid-list>
             </div>
             <br/><br/>
+            <div class="icon-container">
+                <fa-icon [icon]="faMoneyBillAlt" [size]="'3x'" style="color: #6aaf42" class="icono-input"></fa-icon>
+                <label for="total" class="label-input">TOTAL:</label>
+                <input type="text" [(ngModel)]="sumaTotal" class="cool-input resultado-input" readonly>
+              </div>
+              <br><br><br>
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
                 <thead style="color: #636363;">
                     <tr>
-                        <th style="width: 20%; "></th>
-                        <th style="width: 10%; ">Modelo Producto</th>
+                        <th style="width: 10%; "></th>
                         <th style="width: 10%; ">Producto</th>
                         <th style="width: 10%; ">Cantidad</th>
-                        <th style="width: 10%; ">Costo</th>
+                        <th style="width: 10%; ">Precio Uni.</th>
                         <th style="width: 10%; ">Precio</th>
                         <th style="width: 10%; ">Tamaño</th>
                         <th style="width: 10%; ">Color</th>
+                        <th style="width: 20%; "></th>
                     </tr>
                 </thead>
                 <tbody style="color: #767695;">
@@ -43,16 +49,25 @@
                         <td style="text-align: center;">
                             <img src={{detalleMovimientos.url_image}} alt={{detalleMovimientos.precio}} class="img-thumbnail" height="100px" width="100px" data-toggle="modal" data-target="#exampleModal">
                         </td>
-                        <td>{{detalleMovimientos.modelo_producto_nombre}}</td>
                         <td>{{detalleMovimientos.producto_nombre}}</td>
                         <td>{{detalleMovimientos.cantidad}}</td>
                         <td>{{detalleMovimientos.costo}}</td>
                         <td>{{detalleMovimientos.precio}}</td>
                         <td>{{detalleMovimientos.tamanio}}</td>
                         <td>{{detalleMovimientos.color}}</td>
+                        <td style="text-align: center;">
+                            <fa-icon [icon]="faEdit" class="btn btn-info" [size]="'lg'" style="margin-right: 5px;" data-placement="bottom" (click)=" editarDetalle(detalleMovimientos)" title="Editar Detalle"></fa-icon>
+                            <fa-icon [icon]="faTrashAlt" class="btn btn-danger" [size]=" 'lg' " data-placement="bottom" (click)=" eliminarDetalle(detalleMovimientos)" title="Eliminar Modelo Producto" ></fa-icon>
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </div>
+        <br>
+      <div class="button-container">
+        <button class="btn btn-primary" (click)="finalizarPedido()">
+          <span style="color: white"> FINALIZAR PEDIDO </span>
+        </button>
+      </div>
     </div>
 </div>
