--- a/src/app/components/income/carrito/carrito.component.html
+++ b/src/app/components/income/carrito/carrito.component.html
@@ -66,7 +66,7 @@
         <br>
       <div class="button-container">
         <button class="btn btn-primary" (click)="finalizarPedido()">
-          <span style="color: white"> FINALIZAR PEDIDO </span>
+          <span style="color: white"> REALIZAR COMPRA </span>
         </button>
       </div>
     </div>
