--- a/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
+++ b/src/app/components/income/portafolios-comprar/portafolios-comprar.component.html
@@ -94,7 +94,7 @@
       <br>
       <div class="button-container">
         <button class="btn btn-primary" (click)="obtenerDetalleProductos()">
-          <span style="color: white"> Añadir producto </span>
+          <span style="color: white"> Añadir productos </span>
         </button>
       </div>
       <div class="button-container">
