--- a/src/app/components/income/vistafactura/vistafactura.component.css
+++ b/src/app/components/income/vistafactura/vistafactura.component.css
@@ -17,8 +17,9 @@
   
   .invoice-details {
     border: 1px solid #ccc;
-    padding: 20px;
+    padding: 40px;
     margin-bottom: 20px;
+    overflow-x: auto
   }
   
   table {
@@ -68,6 +69,50 @@
   }
   
   /* Otros estilos personalizados */
+  
+.card-body {
+  overflow-x: auto
+}
+
+.icon-container {
+    position: relative;
+  }
+  
+  .icono-input {
+    position: absolute;
+    top: 0;
+    right: 250px;
+  }
+  
+  .label-input {
+    position: absolute;
+    top: 10px;
+    right: 170px;
+    font-size: 20px;
+  }
+  
+  .resultado-input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 150px;
+    height: 35px;
+    text-align: center;
+    /* Estilos adicionales para el input del resultado */
+  }
+
+  .cool-input {
+    width: 100px; /* Ajusta el tamaño de los inputs según tus necesidades */
+  }
+
+  .button-container button {
+    margin-bottom: 50px; /* Margen inferior entre los botones */
+  }
+  
+  .button-container {
+    margin-top: 20px;
+    text-align: center;
+  }
   
   /* Agrega tus estilos personalizados aquí */
   
