--- a/src/app/components/income/vistafactura/vistafactura.component.html
+++ b/src/app/components/income/vistafactura/vistafactura.component.html
@@ -3,7 +3,7 @@
     <br />
     <div class="card-header d-flex justify-content-between">
       <div class="row mx-3">
-        
+        <fa-icon [icon]="faFileInvoice" [size]="'3x'" style="color: #636363"></fa-icon>
         <h1 class="mx-5" style="color: #636363">FACTURA</h1>
       </div>
     </div>
@@ -11,43 +11,70 @@
       <div class="invoice-header">
         <h1>Factura Electrónica</h1>
         <div class="company-info">
-          <img src="logo.png" alt="Logo de la empresa" />
           <div class="company-details">
-            <h3>Nombre de la empresa</h3>
-            <p>RUC: 1234567890001</p>
+            <h3>{{ nombreGrupo }}</h3>
+            <p>RUC: {{ idFiscal }}</p>
             <p>Dirección: Dirección de la empresa</p>
             <p>Teléfono: +1234567890</p>
           </div>
         </div>
         <div class="invoice-info">
           <div class="info-item">
-            <h4>Número de factura:</h4>
+            <h4>Número de factura: {{ numFactura }}</h4>
           </div>
           <div class="info-item">
-            <h4>Fecha de emisión:</h4>
+            <h4>Fecha de emisión: {{ fechaEmision | slice:0:10 }}</h4>
           </div>
           <div class="info-item">
-            <h4>Cliente:</h4>
+            <h4>Cédula/RUC: {{ idFiscalCliente }}</h4>
+          </div>
+          <div class="info-item">
+            <h4>Cliente: {{ cliente }}</h4>
+          </div>
+          <div class="info-item">
+            <h4>Telefono: {{ telefono }}</h4>
+          </div>
+          <div class="info-item">
+            <h4>Email: {{ email }}</h4>
           </div>
         </div>
       </div>
       <div class="invoice-details">
-        <table>
-          <thead>
+        <div class="icon-container">
+          <label for="total" class="label-input">TOTAL:</label>
+          <input type="text" [(ngModel)]="sumaTotal" class="cool-input resultado-input" readonly>
+        </div>
+
+        <br><br><br>
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+          <thead style="color: #636363;">
             <tr>
-              <th>Descripción</th>
-              <th>Cantidad</th>
-              <th>Precio Unitario</th>
-              <th>Total</th>
+              <th style="width: 10%; ">Producto</th>
+              <th style="width: 10%; ">Cantidad</th>
+              <th style="width: 10%; ">Precio Uni.</th>
+              <th style="width: 10%; ">Precio</th>
+              <th style="width: 10%; ">Tamaño</th>
+              <th style="width: 10%; ">Color</th>
             </tr>
           </thead>
-          <tbody></tbody>
+          <tbody style="color: #767695;">
+            <tr *ngFor="let detalleMovimientos of lstDetalleMovimientos">
+              <td>{{detalleMovimientos.producto_nombre}}</td>
+              <td>{{detalleMovimientos.cantidad}}</td>
+              <td>{{detalleMovimientos.costo}}</td>
+              <td>{{detalleMovimientos.precio}}</td>
+              <td>{{detalleMovimientos.tamanio}}</td>
+              <td>{{detalleMovimientos.color}}</td>
+            </tr>
+          </tbody>
         </table>
-        <div class="invoice-total">
-          <h4>Total:</h4>
-        </div>
       </div>
+    </div>
+    <br>
+    <div class="button-container">
+      <button class="btn btn-primary" (click)="finalizarPedido()">
+        <span style="color: white"> FINALIZAR PEDIDO </span>
+      </button>
     </div>
   </div>
 </div>
-
