--- a/src/app/components/income/vistamarcas/vistamarcas.component.css
+++ b/src/app/components/income/vistamarcas/vistamarcas.component.css
@@ -13,6 +13,10 @@
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
+.dashboard-card:hover {
+  background: #dadada;
+}
+
 .card-image {
   height: 100px;
   width: 100px;
