--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -20,15 +20,15 @@
             <div *ngIf="transaccionesExpandidas" class="subitem-menu">
                 <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almaceningresos'] } }]" style="color: white">
                     <span class="material-icons-outlined" style="font-size: 20px">shopping_cart</span>
-                    <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ingresos</font>
+                    <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Compras</font>
                 </a>
-                <a mat-list-item style="color: white">
+                <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almacenegresos'] } }]" style="color: white">
                     <span class="material-icons-outlined" style="font-size: 20px">payment</span>
-                    <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Egresos</font>
+                    <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ventas</font>
                 </a>
                 <a mat-list-item style="color: white">
                     <span class="material-icons-outlined" style="font-size: 20px">monetization_on</span>
-                    <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Saldos</font>
+                    <font style="font-size: 12px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cuentas</font>
                 </a>
               </div>
             <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['inventarios-productos'] } }]" style="color: white">
