ACT MOD COMPRAS Y VENTAS

--- a/src/app/components/navegation-cl/navegation-cl.component.html
+++ b/src/app/components/navegation-cl/navegation-cl.component.html
@@ -43,6 +43,11 @@
                 <span class="material-icons-outlined" style="font-size: 24px">widgets</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pedido Sugerido</font>
             </a>
+            <a mat-list-item [routerLink]="[{ outlets: { contentClient: ['almaceningresos'] } }]" style="color: white">
+                <span class="material-icons-outlined" style="font-size: 24px">shopping_cart</span>
+                <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Plasticaucho</font>
+            </a>
+
             <a mat-list-item href="#" style="color: white">
                 <span class="material-icons-outlined" style="font-size: 24px">monitor</span>
                 <font style="font-size: 13px; text-align: right;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Movimientos</font>
