--- a/src/app/components/sales/menuvent/menuvent.component.html
+++ b/src/app/components/sales/menuvent/menuvent.component.html
@@ -4,7 +4,7 @@
         <div class="card-header d-flex justify-content-between">
             <div class="row mx-3">
               <fa-icon [icon]="faShoppingBag" [size]="'3x'" style="color: #636363"></fa-icon>
-              <h1 class="mx-5" style="color: #636363">Portafolios de los Productos</h1>
+              <h1 class="mx-5" style="color: #636363">FACTURACIÓN</h1>
             </div>
             <button class="btn button carrito-button" (click)="verCarrito()">
               <fa-icon [icon]="faShoppingCart" [size]="'lg'" style="color: #ffffff"></fa-icon>
