--- a/src/app/components/sales/ver-carrito/ver-carrito.component.css
+++ b/src/app/components/sales/ver-carrito/ver-carrito.component.css
@@ -68,7 +68,17 @@
 }
 
 .small-input {
-  width: 80px; /* Ajusta el ancho según tus necesidades */
+  width: 50px; /* Ajusta el ancho según tus necesidades */
   height: 24px; /* Ajusta la altura según tus necesidades */
   font-size: 12px; /* Ajusta el tamaño de fuente según tus necesidades */
+  border: 1px solid #35b0e9;
+}
+
+.button-container button {
+  margin-bottom: 10px; /* Margen inferior entre los botones */
+}
+
+.button-container {
+  margin-top: 20px;
+  text-align: center;
 }
