--- a/src/app/components/sales/ver-carrito/ver-carrito.component.css
+++ b/src/app/components/sales/ver-carrito/ver-carrito.component.css
@@ -82,3 +82,52 @@
   margin-top: 20px;
   text-align: center;
 }
+
+
+  
+.carrito-button {
+  background: rgb(54, 169, 225, 0.8);
+  color: white;
+  font-size: 15px;
+  width: 120px;
+  height: 35px;
+  text-align: center;
+}
+
+.card-body {
+  overflow-x: auto
+}
+
+.cool-input {
+border: 1px solid #35b0e9;
+border-radius: 5px;
+padding: 5px;
+font-size: 14px;
+/* Otros estilos personalizados */
+}
+
+.table-container {
+  max-height: 500px; /* Ajusta este valor según tus necesidades */
+  max-width: 900px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+/* Estilos personalizados para el scrollbar */
+.table-container::-webkit-scrollbar {
+width: 5px; /* Ancho del scrollbar */
+right: 10px; /* Ajusta esta distancia según tus necesidades */
+}
+
+.table-container::-webkit-scrollbar-track {
+background-color: #f1f1f1; /* Color de fondo del track del scrollbar */
+}
+
+.table-container::-webkit-scrollbar-thumb {
+background-color: #888; /* Color del thumb del scrollbar */
+border-radius: 5px; /* Borde redondeado del thumb del scrollbar */
+}
+
+.table-container::-webkit-scrollbar-thumb:hover {
+background-color: #555; /* Color del thumb del scrollbar al pasar el cursor por encima */
+}
