--- a/src/app/components/sales/menuvent/menuvent.component.css
+++ b/src/app/components/sales/menuvent/menuvent.component.css
@@ -1,6 +1,6 @@
   
   .carrito-button {
-    background: #35b0e9;
+    background: #1aa726;
     color: white;
     font-size: 15px;
     width: 120px;
