--- a/src/app/components/sales/ventaprov/ventaprov.component.html
+++ b/src/app/components/sales/ventaprov/ventaprov.component.html
@@ -38,10 +38,10 @@
                     </tr>
                 </thead>
                 <tbody style="color: #767695;">
-                    <tr *ngFor="let movimiento of lstMovimientos" (click)="openModalDetalle(movimiento)" class="table-row"
+                    <tr *ngFor="let movimiento of lstMovimientos" class="table-row"
                         class="table-row">
-                        <td>{{movimiento.id}}</td>
-                        <td>{{movimiento.fecha_emision | slice:0:10}}</td>
+                        <td (click)="openModalDetalle(movimiento)">{{movimiento.id}}</td>
+                        <td (click)="openModalDetalle(movimiento)">{{movimiento.fecha_emision | slice:0:10}}</td>
                         <td>
                             <a class="btn btn-success" (click)="openModal()" 
                             >GENERAR NOTA DE PAGO
